--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
-    <!-- <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="theme-color" content="#0a192f"> -->
     <title>Spending Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
@@ -28,6 +24,9 @@
                 <button id="unlock-btn" class="btn btn-primary w-100 mb-3">Unlock</button>
                 <button id="face-id-btn" class="btn btn-outline-light w-100">
                     <i class="bi bi-faceid"></i> Use Face ID
+                </button>
+                <button id="demo-btn" class="btn btn-outline-secondary w-100 mt-3">
+                    <i class="bi bi-info-circle"></i> View Demo
                 </button>
             </div>
         </div>
