--- a/frontend/index.html
+++ b/frontend/index.html
@@ -46,7 +46,7 @@
                     <h5 class="card-title">Monthly Card Purchases</h5>
                     <div class="budget-info">
                         <span>Spent: <span id="card-spent"></span></span>
-                        <span>Budget: <span id="card-budget">R5,000.00</span></span>
+                        <span>Budget: <span id="card-budget"></span></span>
                     </div>
                     <div class="budget-bar-container">
                         <div id="budget-bar" class="budget-bar">
