--- a/frontend/index.html
+++ b/frontend/index.html
@@ -130,7 +130,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="card">
                         <div class="card-header">
-                            Last Topped-up amount
+                            Current Balance
                         </div>
                         <div class="card-body">
                             <div class="d-flex justify-content-between mb-3">
