updated chart styling

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,7 +91,14 @@
                             Spending by Category
                         </div>
                         <div class="card-body">
-                            <canvas id="spending-chart" height="300"></canvas>
+                            <div class="chart-wrapper">
+                                <div class="chart-container">
+                                    <canvas id="spending-chart" height="300"></canvas>
+                                </div>
+                                <div class="legend-container">
+                                    <div id="chart-legend" class="chart-legend"></div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
